[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gismap"
version = "0.4.1"
description = "GisMap: for researchers, by researchers. Research cartography tools leveraging DBLP and HAL."
readme = "README.md"
requires-python = ">=3.11,<3.15"
authors = [
    {name = "Fabien Mathieu", email = "fabien.mathieu@normalesup.org"}
]
maintainers = [
    {name = "Fabien Mathieu", email = "fabien.mathieu@normalesup.org"}
]
license = "MIT"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "bof>=0.4.2",
    "distinctipy>=1.3.4",
    "domonic>=0.9.13",
    "gismo>=0.5.4",  # spacy (optional in gismo) incompatible with Python 3.14
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.8",
    "platformdirs>=4.5.1",
    "tqdm>=4.67.1",
]

[project.urls]
Repository = "https://github.com/balouf/gismap"
Documentation = "https://balouf.github.io/gismap"

[dependency-groups]
dev = [
    "ipython>=9.9.0",
    "myst-parser[linkify]>=4.0.1",
    "nbsphinx>=0.9.7",
    "pydata-sphinx-theme>=0.16.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
    "sphinx-copybutton>=0.5.2"
]



[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["gismap"]

[tool.coverage.html]
directory = "cov"

[tool.pytest.ini_options]
addopts = "--doctest-modules --cov --cov-config=pyproject.toml --cov-report xml --cov-report html --showlocals --capture=no --exitfirst --failed-first"
